add_library(ruby-ext STATIC "")
  target_link_libraries(ruby-ext PRIVATE ruby-headers)

target_link_libraries(ruby PRIVATE ruby-ext)

#add_subdirectory(bigdecimal)
add_subdirectory(continuation)
add_subdirectory(date)
add_subdirectory(digest)
#add_subdirectory(etc)
add_subdirectory(fcntl)
add_subdirectory(fiber)
add_subdirectory(iconv)
add_subdirectory(mathn)
add_subdirectory(racc)
add_subdirectory(stringio)
add_subdirectory(strscan)
add_subdirectory(zlib)